--- a/pom.xml
+++ b/pom.xml
@@ -287,6 +287,8 @@
 
 	<build>
 		<plugins>
+
+
 			<plugin>
 				<artifactId>maven-eclipse-plugin</artifactId>
 				<version>2.9</version>
@@ -321,6 +323,13 @@
 					<mainClass>org.test.int1.Main</mainClass>
 				</configuration>
 			</plugin>
+
+			<plugin>
+				<groupId>com.heroku.sdk</groupId>
+				<artifactId>heroku-maven-plugin</artifactId>
+				<version>1.2.1</version>
+			</plugin>
+
 		</plugins>
 	</build>
 </project>
