--- a/pom.xml
+++ b/pom.xml
@@ -324,11 +324,11 @@
 				</configuration>
 			</plugin>
 
-			<plugin>
-				<groupId>com.heroku.sdk</groupId>
-				<artifactId>heroku-maven-plugin</artifactId>
-				<version>1.2.1</version>
-			</plugin>
+<!-- 			<plugin> -->
+<!-- 				<groupId>com.heroku.sdk</groupId> -->
+<!-- 				<artifactId>heroku-maven-plugin</artifactId> -->
+<!-- 				<version>1.2.1</version> -->
+<!-- 			</plugin> -->
 
 		</plugins>
 	</build>
